<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.competencies">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="8dp" />

            <TextView
                android:text="@string/generic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/g1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/g2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/g3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/g4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/g5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="8dp" />

            <TextView
                android:text="@string/professionals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:text="@string/p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
