<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.home">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="8dp" />

            <TextView
                android:text="@string/what"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="5dp" />

            <TextView
                android:text="@string/planea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="15dp" />

            <TextView
                android:text="@string/specs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="5dp" />

            <TextView
                android:text="@string/specs2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
