<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".about"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="15dp" />

            <TextView
                android:text="@string/developers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/vanessa"
                android:id="@+id/vanessa"
                android:layout_height="150dp"
                android:layout_gravity="center" />
            <TextView
                android:text="@string/vanessa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/carlos"
                android:id="@+id/carlos"
                android:layout_height="150dp"
                android:layout_gravity="center" />
            <TextView
                android:text="@string/carlos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/rente"
                android:id="@+id/rente"
                android:layout_height="150dp"
                android:layout_gravity="center" />
            <TextView
                android:text="@string/rente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/crow"
                android:id="@+id/crow"
                android:layout_height="150dp"
                android:layout_gravity="center" />
            <TextView
                android:text="@string/crow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="normal|bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="20dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
